--- a/compsci180/1/index.html
+++ b/compsci180/1/index.html
@@ -71,13 +71,8 @@
 <body>
   <header>
     <div class="wrap">
-      <h1 class="title">Photography Homework: Focal Length, Compression & Dolly Zoom</h1>
-      <p class="subtitle">Show the visual effects of distance vs. zoom, architectural compression, and recreate a dolly zoom.</p>
-      <nav aria-label="Sections">
-        <a href="#part1">Part 1: Selfie – Wrong vs Right</a>
-        <a href="#part2">Part 2: Architectural Compression</a>
-        <a href="#part3">Part 3: Dolly Zoom</a>
-      </nav>
+      <h1 class="title">Zimu's Project 0</h1>
+
     </div>
   </header>
 
@@ -85,7 +80,7 @@
     <!-- PART 1 -->
     <section id="part1">
       <h2>Part 1 — Selfie: The Wrong Way vs. The Right Way</h2>
-      <p class="note">Take a close-up selfie ("wrong"), then step back several feet and zoom to match face size ("right"). Compare distortion. Think about <em>why</em>.</p>
+      <p class="note">Take a close-up selfie ("wrong"), then step back several feet and zoom to match face size ("right"). Compare distortion.</p>
 
       <!-- Two-up comparison; swap image paths to yours -->
       <div class="grid cols-2 compare" role="group" aria-label="Selfie comparison">
@@ -99,31 +94,15 @@
         </figure>
       </div>
 
-      <!-- Optional: a strip to show multiple focal lengths; delete if you only have 2 photos. -->
-      <div style="margin-top:16px" class="grid cols-3" aria-label="Optional focal length strip">
-        <figure>
-          <img class="lb" src="media/p1_strip_01.jpg" alt="Portrait at a longer focal length" />
-          <figcaption>Example at ~85mm (stepped back).</figcaption>
-        </figure>
-        <figure>
-          <img class="lb" src="media/p1_strip_02.jpg" alt="Portrait at a mid focal length" />
-          <figcaption>Example at ~35mm.</figcaption>
-        </figure>
-        <figure>
-          <img class="lb" src="media/p1_strip_03.jpg" alt="Portrait at a very wide focal length" />
-          <figcaption>Example at ~16mm (very close).</figcaption>
-        </figure>
-      </div>
-
       <div class="callout small">
-        Hint: The “right way” changes <strong>camera distance</strong> and uses zoom to match framing. Wide lenses exaggerate depth when you are close; longer lenses compress when you stand back.
+        Second photo is much more cute! Her name is Emerald. The camera is like a point, which receives light from a fan-shaped area. When the camera is really close, the stretch will be really significant, making it wired. However, when the camera is further, the light is more similar to parallel, making it more beautiful and natural, as it’s almost the same as the image received by our eyes.
       </div>
     </section>
 
     <!-- PART 2 -->
     <section id="part2">
       <h2>Part 2 — Architectural Perspective Compression</h2>
-      <p class="note">Pick a long path (street/corridor). First: stand far and zoom in. Second: walk up so the subject is the <em>same size</em> but use a wider lens/no zoom. The zoomed shot should look “flatter” (compressed).</p>
+      <p class="note">Pick a long path (street/corridor). First: stand far and zoom in. Second: walk up so the subject is the <em>same size</em> but use a wider lens/no zoom.</p>
 
       <div class="grid cols-2 compare" role="group" aria-label="Architecture comparison">
         <figure>
@@ -137,14 +116,14 @@
       </div>
 
       <div class="callout small">
-        Again, keep the <em>subject size</em> similar in both photos. Only the distance/lens should change.
+        The first one is from far distance, which seems more similar to what it actually looks like, and the second one engages some stretch as it was shot closer. Since the object is larger which makes the relatively distance different, even if the distances of 'closer version’ in Part II is further than that of ‘further version’ in Part I, the stretch	effect is more obvious. 
       </div>
     </section>
 
     <!-- PART 3 -->
     <section id="part3">
       <h2>Part 3 — The Dolly Zoom</h2>
-      <p class="note">Move the camera backward while zooming in (or forward while zooming out) so your subject stays the same size. Combine your stills into a GIF and place it below.</p>
+      <p class="note">Move the camera backward while zooming in (or forward while zooming out) so your subject stays the same size.</p>
 
       <figure>
         <!-- Replace with your final GIF file path -->
@@ -152,35 +131,11 @@
         <figcaption>Your dolly zoom (animated GIF).</figcaption>
       </figure>
 
-      <!-- Optional: embed a short video or BTS photo -->
-      <div class="grid cols-2" style="margin-top:14px">
-        <figure>
-          <img class="lb" src="media/p3_bts.jpg" alt="Behind-the-scenes of capturing dolly zoom" />
-          <figcaption>Optional: Behind-the-scenes photo.</figcaption>
-        </figure>
-        <figure>
-          <iframe style="aspect-ratio:16/9;width:100%;border:1px solid var(--border);border-radius:12px" src="https://www.youtube.com/embed/0z13kLahmKM" title="The Best Dolly Zoom Shots Ever" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <figcaption>Reference: examples of dolly zoom in cinema.</figcaption>
-        </figure>
-      </div>
-
-      <div class="callout small">
-        Tip for creating the GIF: export your frames in order (e.g., 01.jpg → 08.jpg), then use Preview (macOS), Photoshop, or Python to make <code>p3_dolly.gif</code>.
-      </div>
     </section>
 
-    <section>
-      <h2>Notes & Reflection</h2>
-      <p class="note">Briefly explain what you observed about distortion and compression, and why stepping back + zooming changes facial proportions and background relationships.</p>
-      <ul class="small">
-        <li>Wide lenses exaggerate distances when the camera is close, stretching near features (e.g., noses in selfies).</li>
-        <li>Longer focal lengths from farther away compress distances and flatten perspective.</li>
-        <li>Dolly zoom keeps subject size constant while the background seems to warp (size/scale relationship changes).</li>
-      </ul>
-    </section>
 
     <footer class="footer small">
-      <p>Made by <strong>Your Name</strong>. Course: Photography / Visual Computing — Homework: Focal Length & Dolly Zoom. All photos © you.</p>
+      <p>Made by <strong>Zimu Wang</strong>. All photos © Zimu Wang.</p>
     </footer>
   </main>
 
