--- a/compsci180/4/index.html
+++ b/compsci180/4/index.html
@@ -134,7 +134,7 @@
         \end{bmatrix}$$
       </div>
 
-      <p>In this part, I manually select at least 4 pairs of corresponding points in each image pair to construct the matrix $A$ and vector $\mathbf{b}$, then solve for $\mathbf{h}$. As I only choose 4 points, the system is exactly determined, but in practice, more points can be used for a least-squares solution.</p>
+      <p>In this part, I manually select 4 pairs of corresponding points in each image pair to construct the matrix $A$ and vector $\mathbf{b}$, then solve for $\mathbf{h}$. As I only choose 4 points, the system is exactly determined, but in practice, more points can be used for a least-squares solution.</p>
 
       <p>Below are the point correspondences I used for each image pair, along with the transformed $A$ and $\mathbf{b}$, and finally the solved homography matrix $H$.</p>
       
@@ -318,20 +318,20 @@
       <div class="card" style="margin-top: 20px;">
         <h3 style="margin-top: 0; color: var(--text);">Comparison</h3>
         <p>
-          The qualities of the bilinear and nearest‑neighbor interpolation methods are really similar in my examples. In the first example, as there are some lots of words, the clearity of bilinear warping is slightly better.
+          The qualities of the bilinear and nearest‑neighbor interpolation methods are really similar in my examples. In the first example, as there are lots of words, the clarity of bilinear warping is slightly better.
       </div>
     </section>
 
     <section id="a4">
       <h2>A.4 — Blend Images into a Mosaic (source images are from part A.1)</h2>
       <div class="grid cols-1">
-        <figure class="card"><img src="images/mosaic1.jpg"><figcaption class="figcap">Source 1</figcaption></figure>
+        <figure class="card"><img src="images/mosaic1.jpg"><figcaption class="figcap">Mosaic 1</figcaption></figure>
       </div>
       <div class="grid cols-1">
-        <figure class="card"><img src="images/mosaic2.jpg"><figcaption class="figcap">Source 2</figcaption></figure>
+        <figure class="card"><img src="images/mosaic2.jpg"><figcaption class="figcap">Mosaic 2</figcaption></figure>
       </div>
       <div class="grid cols-1">
-        <figure class="card"><img src="images/mosaic3.jpg"><figcaption class="figcap">Source 3</figcaption></figure>
+        <figure class="card"><img src="images/mosaic3.jpg"><figcaption class="figcap">Mosaic 3</figcaption></figure>
       </div> 
 
       <div class="card" style="margin-top: 20px;">
