--- a/compsci180/4/index.html
+++ b/compsci180/4/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Project 3A — Image Warping & Mosaicing</title>
+  <title>Project 3 — Automatic Stitching Photo Mosaics</title>
   
   <!-- KaTeX CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css" integrity="sha384-GvrOXuhMATgEsSwCs4smul74iXGOixntILdUW9XmUC6+HX0sLNAK3q71HotJqlAn" crossorigin="anonymous">
@@ -349,8 +349,60 @@
         </ol>
       </div>
     </section>
+  </div>
+
+  <div class="wrap">
+    <section id="b-summary">
+      <h2>Part B — Automatic Stitching</h2>
+      <p class="lead">In this part of the project, I implement an automatic image stitching pipeline. This involves detecting interest points using a Harris detector, applying Adaptive Non-Maximal Suppression (ANMS) to distribute points evenly, extracting feature descriptors for these points, matching features between images, and finally using RANSAC to compute a robust homography for stitching.</p>
+    </section>
+
+    <section id="b1">
+      <h2>B.1 — Harris Corner Detection</h2>
+      <p>First, I detect corner features using a Harris Interest Point Detector. Then, I apply Adaptive Non-Maximal Suppression (ANMS) to reduce the number of interest points and ensure they are well-distributed across the image, which is crucial for a stable homography estimation.</p>
+      <div class="grid cols-2">
+        <figure class="card"><img src="images/b1_harris.jpg"><figcaption class="figcap">Harris corners detected on an image.</figcaption></figure>
+        <figure class="card"><img src="images/b1_anms.jpg"><figcaption class="figcap">Corners after Adaptive Non-Maximal Suppression (ANMS), num=250</figcaption></figure>
+      </div>
+    </section>
+
+    <section id="b2">
+      <h2>B.2 — Feature Descriptor Extraction</h2>
+      <p>For each interest point from the previous step, I extract a feature descriptor. This is done by sampling a 40x40 window, downsampling it to 8x8, and then normalizing it (bias/gain normalization). This descriptor captures the local appearance around the feature point.</p>
+      <div class="grid cols-1">
+        <figure class="card"><img src="images/b2_features.jpg"><figcaption class="figcap">Extracted Features</figcaption></figure>
+      </div>
+    </section>
+
+    <section id="b3">
+      <h2>B.3 — Feature Matching</h2>
+      <p>After extracting descriptors for both images, I match them. For each feature in the first image, I find its nearest (1-NN) and second nearest neighbors (2-NN) in the second image based on norm2 distance. I use Lowe's ratio test (1-NN dist / 2-NN dist): if the ratio of the distance to the first neighbor to the distance to the second neighbor is below a certain threshold (0.5 in this case), I consider it a good match.</p>
+      <div class="grid cols-1">
+        <figure class="card"><img src="images/b3_matches.jpg"><figcaption class="figcap">Matched features between two images.</figcaption></figure>
+      </div>
+    </section>
+
+    <section id="b4">
+      <h2>B.4 — RANSAC for Robust Homography</h2>
+      <p>The feature matches from the previous step may still contain outliers. I use RANSAC (Random Sample Consensus) to compute a robust homography matrix. RANSAC iteratively selects random subsets of 4 matching points, computes a homography, and finds the one with the most inliers. This robust homography is then used to warp and stitch the images, similar to Part A.
+        In general, I think the automatic stitching results are better than the manual ones. 
+      <div class="grid cols-2">
+        <figure class="card"><img src="images/mosaic1.jpg"><figcaption class="figcap">Mosaic 1 (Manual Points)</figcaption></figure>
+        <figure class="card"><img src="images/b4_auto_mosaic1.jpg"><figcaption class="figcap">Mosaic 1 (Automatic)</figcaption></figure>
+      </div>
+      <div class="grid cols-2">
+        <figure class="card"><img src="images/mosaic2.jpg"><figcaption class="figcap">Mosaic 2 (Manual Points)</figcaption></figure>
+        <figure class="card"><img src="images/b4_auto_mosaic2.jpg"><figcaption class="figcap">Mosaic 2 (Automatic)</figcaption></figure>
+      </div>
+      <div class="grid cols-2">
+        <figure class="card"><img src="images/mosaic3.jpg"><figcaption class="figcap">Mosaic 3 (Manual Points)</figcaption></figure>
+        <figure class="card"><img src="images/b4_auto_mosaic3.jpg"><figcaption class="figcap">Mosaic 3 (Automatic)</figcaption></figure>
+      </div>
+    </section>
+
+
     <footer>
-      <div>© 2025 Zimu Wang. Assignment spec: “Image Warping and Mosaicing (Part A)” — CS180/280A.</div>
+      <div>© 2025 Zimu Wang. Assignment spec: “Image Warping and Mosaicing” — CS180/280A.</div>
     </footer>
   </div>
 </body>
