--- a/compsci180/4/index.html
+++ b/compsci180/4/index.html
@@ -61,7 +61,7 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Project 3A — Image Warping &amp; Mosaicing</h1>
+      <h1>Project 3 — Automatic Stitching Photo Mosaics</h1>
       <div class="sub">CS180/280A · Fall 2025 · Zimu Wang</div>
     </header>
 
