--- a/compsci180/index.html
+++ b/compsci180/index.html
@@ -1,21 +1,310 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>UC Berkeley CS180 Portfolio | Zimu Wang</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@500;700&family=Space+Grotesk:wght@300;400;500;600&display=swap');
+
+        :root {
+            --bg: #f7f3ed;
+            --ink: #151515;
+            --muted: #5b5b5b;
+            --accent: #c24e2a;
+            --accent-2: #0f3d3e;
+            --card: #ffffff;
+            --ring: rgba(194, 78, 42, 0.25);
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            font-family: "Space Grotesk", "Segoe UI", sans-serif;
+            color: var(--ink);
+            background: radial-gradient(1200px 800px at 75% -10%, #f1e4d6, transparent 65%),
+                        radial-gradient(900px 700px at -10% 30%, #e8f1ec, transparent 60%),
+                        var(--bg);
+        }
+
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        .page {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 28px 20px 80px;
+        }
+
+        .topbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 16px;
+            margin-bottom: 32px;
+        }
+
+        .brand {
+            font-family: "Fraunces", "Times New Roman", serif;
+            font-size: 22px;
+            letter-spacing: 0.5px;
+        }
+
+        .cta-group {
+            display: flex;
+            gap: 12px;
+            flex-wrap: wrap;
+        }
+
+        .button {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            padding: 10px 16px;
+            border-radius: 999px;
+            border: 1px solid transparent;
+            font-weight: 500;
+            transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
+        }
+
+        .button.primary {
+            background: var(--accent);
+            color: #fff;
+            box-shadow: 0 10px 24px var(--ring);
+        }
+
+        .button.secondary {
+            background: transparent;
+            border-color: var(--accent-2);
+            color: var(--accent-2);
+        }
+
+        .button:hover {
+            transform: translateY(-2px);
+        }
+
+        .hero {
+            display: grid;
+            gap: 28px;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            align-items: center;
+            margin-bottom: 36px;
+        }
+
+        .hero h1 {
+            font-family: "Fraunces", "Times New Roman", serif;
+            font-size: clamp(32px, 4vw, 52px);
+            line-height: 1.1;
+            margin: 0 0 12px;
+        }
+
+        .hero p {
+            margin: 0;
+            color: var(--muted);
+            font-size: 16px;
+            line-height: 1.6;
+        }
+
+        .stats {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+            gap: 16px;
+        }
+
+        .stat-card {
+            background: var(--card);
+            border-radius: 16px;
+            padding: 16px;
+            box-shadow: 0 16px 40px rgba(21, 21, 21, 0.08);
+        }
+
+        .stat-card span {
+            font-size: 12px;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+            color: var(--muted);
+        }
+
+        .stat-card strong {
+            display: block;
+            font-size: 20px;
+            margin-top: 8px;
+        }
+
+        .section {
+            margin-top: 40px;
+        }
+
+        .section-title {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 12px;
+            margin-bottom: 16px;
+        }
+
+        .section-title h2 {
+            font-size: 24px;
+            margin: 0;
+        }
+
+        .project-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+            gap: 18px;
+        }
+
+        .card {
+            background: var(--card);
+            border-radius: 18px;
+            padding: 18px;
+            min-height: 170px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            box-shadow: 0 18px 38px rgba(15, 61, 62, 0.12);
+            transition: transform 0.25s ease, box-shadow 0.25s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 24px 50px rgba(15, 61, 62, 0.18);
+        }
+
+        .card .label {
+            font-size: 12px;
+            letter-spacing: 1.2px;
+            text-transform: uppercase;
+            color: var(--accent-2);
+        }
+
+        .card h3 {
+            margin: 0;
+            font-size: 18px;
+        }
+
+        .card p {
+            margin: 0;
+            color: var(--muted);
+            font-size: 14px;
+            line-height: 1.5;
+        }
+
+        .footer {
+            margin-top: 60px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            gap: 16px;
+            font-size: 14px;
+            color: var(--muted);
+        }
+
+        .fade-in {
+            opacity: 0;
+            transform: translateY(12px);
+            animation: fadeUp 0.7s ease forwards;
+        }
+
+        .fade-delay-1 { animation-delay: 0.1s; }
+        .fade-delay-2 { animation-delay: 0.2s; }
+        .fade-delay-3 { animation-delay: 0.3s; }
+        .fade-delay-4 { animation-delay: 0.4s; }
+
+        @keyframes fadeUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 640px) {
+            .topbar {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .cta-group {
+                width: 100%;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My CS180 Portfolio!</h1>
-    <a href="./1/index.html">Project 0</a>
-    <a href="./2/index.html">Project 1</a>
-    <a href="./3/index.html">Project 2</a>
-    <a href="./4/index.html">Project 3</a>
-    <a href="./5/index.html">Project 4</a>
-    <a href="./6/index.html">Project 5</a>
+    <div class="page">
+        <header class="topbar fade-in">
+            <div class="brand">Zimu Wang · UC Berkeley CS180 Portfolio</div>
+        </header>
+
+        <section class="hero">
+            <div class="fade-in fade-delay-1">
+                <h1>Computer Vision Projects Results Demos.</h1>
+                <p>
+                    This portfolio collects my CS180 work, where
+                    each project links to a detailed write-up with goals, methods, and visuals.
+                </p>
+            </div>
+            <div class="stats fade-in fade-delay-2">
+                <div class="stat-card">
+                    <span>Projects</span>
+                    <strong>6 Complete</strong>
+                </div>
+                <div class="stat-card">
+                    <span>Focus</span>
+                    <strong>Computer Vision</strong>
+                </div>
+                <div class="stat-card">
+                    <span>Tools</span>
+                    <strong>Python · OpenCV · ML</strong>
+                </div>
+            </div>
+        </section>
+
+        <section id="projects" class="section">
+            <div class="section-title">
+                <h2>Project index</h2>
+                <span>Click any card to open the full report.</span>
+            </div>
+            <div class="project-grid">
+                <a class="card fade-in fade-delay-1" href="./1/index.html">
+                    <span class="label">Project 0</span>
+                    <h3>Image Manipulation Basics</h3>
+                    <p>Warm-up exercises covering image I/O, sampling, and simple pixel ops.</p>
+                </a>
+                <a class="card fade-in fade-delay-2" href="./2/index.html">
+                    <span class="label">Project 1</span>
+                    <h3>Filtering & Hybrid Images</h3>
+                    <p>Spatial filtering and frequency analysis to build perceptual hybrids.</p>
+                </a>
+                <a class="card fade-in fade-delay-3" href="./3/index.html">
+                    <span class="label">Project 2</span>
+                    <h3>Image Blending & Pyramids</h3>
+                    <p>Multi-resolution blending techniques for seamless composite images.</p>
+                </a>
+                <a class="card fade-in fade-delay-4" href="./4/index.html">
+                    <span class="label">Project 3</span>
+                    <h3>Feature Matching & Stitching</h3>
+                    <p>Keypoint detection, matching, and panorama generation workflows.</p>
+                </a>
+                <a class="card fade-in fade-delay-1" href="./5/index.html">
+                    <span class="label">Project 4</span>
+                    <h3>Auto Alignment & Reconstruction</h3>
+                    <p>Aligning and reconstructing images with robust, optimized pipelines.</p>
+                </a>
+                <a class="card fade-in fade-delay-2" href="./6/index.html">
+                    <span class="label">Project 5</span>
+                    <h3>Neural Rendering</h3>
+                    <p>Neural techniques for novel view synthesis and scene understanding.</p>
+                </a>
+            </div>
+        </section>
+
+    </div>
 </body>
 </html>
